force-app/main/default/objects/SFDC_Candidate__c/SFDC_Candidate__c.object-meta.xml
<CustomObject>
    <description>Candidates selected for consideration of a job</description>
    <label>Candidate</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>