force-app/main/default/objects/SFDC_Candidate__c/fields/Candidate_assign_to__c.field-meta.xml
<CustomField>
    <fullName>Candidate_assign_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000001WXBFEA4</relationshipName>
    <type>Lookup</type>
</CustomField>