force-app/main/default/objects/SFDC_Candidate__c/fields/Candidate_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Contact_Date__c</fullName>
    <label>Contact_Date</label>
    <type>Date</type>
</CustomField>