force-app/main/default/objects/SFDC_Candidate__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <label>Candidate Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Back Burner</fullName>
            </value>
            <value>
                <fullName>Candidate not interested - Compensation</fullName>
            </value>
            <value>
                <fullName>Candidate not interested - Location</fullName>
            </value>
            <value>
                <fullName>Candidate not interested - Took another job</fullName>
            </value>
            <value>
                <fullName>Consider for future role</fullName>
            </value>
            <value>
                <fullName>Employee Resigned</fullName>
            </value>
            <value>
                <fullName>Evaluation - Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Final Round Interview/Presentation</fullName>
            </value>
            <value>
                <fullName>Hired- Consultant</fullName>
            </value>
            <value>
                <fullName>Hired- Employee</fullName>
            </value>
            <value>
                <fullName>Interview - Request</fullName>
            </value>
            <value>
                <fullName>Interview - Scheduled</fullName>
            </value>
            <value>
                <fullName>Lost Interest</fullName>
            </value>
            <value>
                <fullName>-None-</fullName>
            </value>
            <value>
                <fullName>No position available</fullName>
            </value>
            <value>
                <fullName>Offer - Accepted</fullName>
            </value>
            <value>
                <fullName>Offer - Declined</fullName>
            </value>
            <value>
                <fullName>Offer Declined - Commute</fullName>
            </value>
            <value>
                <fullName>Offer Declined - Comp</fullName>
            </value>
            <value>
                <fullName>Offer Declined - Counter Offer</fullName>
            </value>
            <value>
                <fullName>Offer Declined - MISC</fullName>
            </value>
            <value>
                <fullName>Offer Declined - Other opp</fullName>
            </value>
            <value>
                <fullName>Offer - negotiation</fullName>
            </value>
            <value>
                <fullName>Offer - Request</fullName>
            </value>
            <value>
                <fullName>Offer - Sent</fullName>
            </value>
            <value>
                <fullName>Phone Screen - On the fence</fullName>
            </value>
            <value>
                <fullName>Phone Screen - Request</fullName>
            </value>
            <value>
                <fullName>Phone Screen - Scheduled</fullName>
            </value>
            <value>
                <fullName>Questionnaire - Request</fullName>
            </value>
            <value>
                <fullName>Questionnaire - Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>