force-app/main/default/objects/SFDC_Candidate__c/fields/Candidate_US_work_authorization__c.field-meta.xml
<CustomField>
    <fullName>Candidate_US_work_authorization__c</fullName>
    <label>Candidate US work authorization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>