force-app/main/default/objects/SFDC_Candidate__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Candidate Withdrew</fullName>
            </value>
            <value>
                <fullName>Consider for Future Role</fullName>
            </value>
            <value>
                <fullName>Back Burner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>