force-app/main/default/objects/SFDC_Candidate__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vice President</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Operator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>