force-app/main/default/objects/SFDC_Candidate__c/fields/Preferred_Phone__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Phone__c</fullName>
    <description>The phone number at which the candidate prefers to be call.</description>
    <label>Preferred_Phone</label>
    <type>Phone</type>
</CustomField>