force-app/main/default/objects/SFDC_Candidate__c/fields/Race_Ethnic_Origin__c.field-meta.xml
<CustomField>
    <fullName>Race_Ethnic_Origin__c</fullName>
    <label>Race_Ethnic Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>American Indian or Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>African American</fullName>
            </value>
            <value>
                <fullName>Hispanic</fullName>
            </value>
            <value>
                <fullName>Caucasian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>I do not wish to complete questionnaire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>