force-app/main/default/objects/SFDC_Candidate__c/fields/Referring_Employee__c.field-meta.xml
<CustomField>
    <fullName>Referring_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Employee</label>
    <referenceTo>SFDC_Referring_Employee__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>R00N30000001WXBHEA4</relationshipName>
    <type>Lookup</type>
</CustomField>