force-app/main/default/objects/SFDC_Candidate__c/fields/Resume_Rcvd_Date__c.field-meta.xml
<CustomField>
    <fullName>Resume_Rcvd_Date__c</fullName>
    <label>Resume Rcvd Date</label>
    <type>Date</type>
</CustomField>