force-app/main/default/objects/SFDC_Candidate__c/fields/SFDC_Candidate_Address__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Candidate_Address__c</fullName>
    <description>Address in full</description>
    <label>Candidate Address</label>
    <type>TextArea</type>
</CustomField>