force-app/main/default/objects/SFDC_Candidate__c/fields/SFDC_Candidate_Email__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Candidate_Email__c</fullName>
    <label>Candidate Email</label>
    <type>Email</type>
</CustomField>