force-app/main/default/objects/SFDC_Candidate__c/fields/SFDC_Department__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>SFDC_Department__c</referenceTo>
    <relationshipLabel>Candidates</relationshipLabel>
    <relationshipName>R00N30000001WXBGEA4</relationshipName>
    <type>Lookup</type>
</CustomField>