force-app/main/default/objects/SFDC_Candidate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SFDC_Candidate_Name__c</columns>
    <columns>Candidate_Status__c</columns>
    <columns>SFDC_Candidate_Email__c</columns>
    <columns>Preferred_Phone__c</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>